@@ -31,12 +31,11 @@ if (count($requestIDtmp) >= 1)
 if ($bFound)
 {
 	$db->query("UPDATE releases SET reqidstatus = 1, searchname = " . $db->escapeString($newTitle) . " WHERE ID = " . $pieces[0]);
-	echo "\nUpdated requestID " . $requestID . " to release name: ".$newTitle.$n;
+	echo "\nUpdated requestID " . $requestID . " to release name: ".$newTitle;
 }					
 else
 {
 	$db->query("UPDATE releases SET reqidstatus = -2 WHERE ID = " . $pieces[0]);
-	echo ".";
 }
 
 function getReleaseNameFromRequestID($site, $requestID, $groupName)
