@@ -65,8 +65,12 @@ while (count - first) < 10000:
 		backfilldays = "datediff(curdate(),(select value from site where setting = 'safebackfilldate'))"
 
 	#query to grab backfill groups
-	cur.execute("SELECT name, first_record from groups where first_record IS NOT NULL and backfill = 1 and first_record_postdate != '2000-00-00 00:00:00' and (now() - interval %s day) < first_record_postdate %s" % (backfilldays, group))
-	datas = cur.fetchone()
+	if len(sys.argv) == 1:
+		cur.execute("SELECT name, first_record from groups where first_record IS NOT NULL and backfill = 1 and first_record_postdate != '2000-00-00 00:00:00' and (now() - interval %s day) < first_record_postdate %s" % (backfilldays, group))
+		datas = cur.fetchone()
+	else:
+		cur.execute("SELECT name, first_record from groups where name = '%s' and first_record IS NOT NULL and backfill = 1 and first_record_postdate != '2000-00-00 00:00:00' and (now() - interval %s day) < first_record_postdate %s" % (sys.argv[1], backfilldays, group))
+		datas = cur.fetchone()
 	if not datas:
 		print("No Groups enabled for backfill")
 		sys.exit()
@@ -126,7 +130,7 @@ class queue_runner(threading.Thread):
 					time.sleep(.5)
 					self.my_queue.task_done()
 
-def main():
+def main(args):
 	global time_of_last_run
 	time_of_last_run = time.time()
 
@@ -162,4 +166,4 @@ def main():
 
 
 if __name__ == '__main__':
-	main()
+	main(sys.argv[1:])
