@@ -99,31 +99,31 @@ class PostProcess
 	//
 	// Process nfo files.
 	//
-	public function processNfos($threads='')
+	public function processNfos($releaseToWork='')
 	{
 		if ($this->site->lookupnfo == 1)
 		{
 			$nfo = new Nfo($this->echooutput);
-			$nfo->processNfoFiles($threads, $this->site->lookupimdb, $this->site->lookuptvrage);
+			$nfo->processNfoFiles($releaseToWork, $this->site->lookupimdb, $this->site->lookuptvrage);
 		}
 	}
 
 	//
 	// Lookup imdb if enabled.
 	//
-	public function processMovies($threads='')
+	public function processMovies($releaseToWork='')
 	{
 		if ($this->site->lookupimdb == 1)
 		{
 			$movie = new Movie($this->echooutput);
-			$movie->processMovieReleases($threads);
+			$movie->processMovieReleases($releaseToWork);
 		}
 	}
 
 	//
 	// Lookup music if enabled.
 	//
-	public function processMusic($threads='')
+	public function processMusic($threads=1)
 	{
 		if ($this->site->lookupmusic == 1)
 		{
@@ -135,7 +135,7 @@ class PostProcess
 	//
 	// Lookup games if enabled.
 	//
-	public function processGames($threads='')
+	public function processGames($threads=1)
 	{
 		if ($this->site->lookupgames == 1)
 		{
@@ -147,7 +147,7 @@ class PostProcess
 	//
 	// Lookup anidb if enabled - always run before tvrage.
 	//
-	public function processAnime($threads='')
+	public function processAnime($threads=1)
 	{
 		if ($this->site->lookupanidb == 1)
 		{
@@ -160,19 +160,19 @@ class PostProcess
 	//
 	// Process all TV related releases which will assign their series/episode/rage data.
 	//
-	public function processTv($threads='')
+	public function processTv($releaseToWork='')
 	{
 		if ($this->site->lookuptvrage == 1)
 		{
 			$tvrage = new TVRage($this->echooutput);
-			$tvrage->processTvReleases($threads, $this->site->lookuptvrage==1);
+			$tvrage->processTvReleases($releaseToWork, $this->site->lookuptvrage==1);
 		}
 	}
 
 	//
 	// Process books using amazon.com.
 	//
-	public function processBooks($threads='')
+	public function processBooks($threads=1)
 	{
 		if ($this->site->lookupbooks == 1)
 		{
