@@ -338,6 +338,13 @@ Class Predb
 		return $newnames;
 	}
 
+	//update a single release as its created
+	public function matchPre($cleanerName, $releaseID)
+	{
+		$db = new DB();
+		$db->query(sprintf("update releaseID = %d from predb where name = %s and releaseID = null", $releaseID, $db->escapeString($cleanerName)));
+	}
+
 	// When a searchname is the same as the title, tie it to the predb.
 	public function matchPredb()
 	{
