@@ -1,3 +1,5 @@
+07112013 -> jonnyboy -> fixed bug in postprocess.php
+						beginning the move of pre/requestID matching to release creation, instead of separate process later
 07102013 -> jonnyboy -> fixed bug in backfill causing some issue with nntp stall
 						moved python lib files
 07092013 -> jonnyboy -> added limit clause when running populate gids from tmux
